Fixing issue with rows margins on mobile

--- a/css/scss/_theme-responsive.scss
+++ b/css/scss/_theme-responsive.scss
@@ -16,6 +16,11 @@
         }
     }
 
+    .row {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
     .navbar-brand {
         float: none;
     }
